# jira-worklog-manager

./: .env.example  .gitignore  CLAUDE.md  USER_GUIDE.md  index.html  package-lock.json  package.json  vercel.json
api/: _cors.js  _identity.js  attachment-upload.js  attachment.js  proxy.js  sessions.js  webhook-ensure.js  webhook.js
api/auth/: callback.js  refresh.js
lib/: sessionLogic.js  worklogLogic.js
public/: privacy.html  terms.html
scripts/: take-screenshots.mjs
src/: actions.js  adf.js  adfProsemirror.js  adfToMarkdown.js  auth.js  autoReload.js  backlogPoll.js  browserNotify.js  data.js  demo.js  events.js  holidays.js  issueChanges.js  issueFlash.js  issueTemplates.js  jira.js  jiraWebhook.js  main.js  markdownToAdf.js  render.js  sessionSync.js  state.js  storage.js  style.css  tiptap.js  tiptapCard.js  tiptapEditor.js  tiptapMedia.js  tiptapMounts.js  transitionCatalog.js  ui.js  utils.js
src/events/: _delegate.js  _dom.js  _keynav.js  calendar.js  comments.js  create.js  detail.js  dropdowns.js  edit.js  finish.js  header.js  manual.js  settings.js  summary.js  swap.js  transition.js
src/views/: changelog.js  favorites.js  header.js  issues.js  login.js  logs.js  modals.js  sessions.js  settings.js  summary.js
widget/: README.md  finish.html  index.html  package-lock.json  package.json  swap.html  vite.config.js
widget/src/: api.js  auth.js  config.js  finish.js  main.js  shared.js  styles.css  swap.js  window.js
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs
